re-ran yodl (This used to be commit 98b72722c8c221047d890f9b7b1d51f16fdac705)

--- a/docs/manpages/nmbd.8
+++ b/docs/manpages/nmbd.8
@@ -204,12 +204,12 @@ This man page is correct for version 2\&.0 of the Samba suite\&.
 (1)\fP, and the Internet RFC\'s \fBrfc1001\&.txt\fP,
 \fBrfc1002\&.txt\fP\&. In addition the CIFS (formerly SMB) specification is
 available as a link from the Web page :
-http://samba\&.anu\&.edu\&.au/cifs/\&.
+http://samba\&.org/cifs/\&.
 .PP 
 .SH "AUTHOR" 
 .PP 
 The original Samba software and related utilities were created by
-Andrew Tridgell \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&. Samba is now developed
+Andrew Tridgell \fIsamba-bugs@samba\&.org\fP\&. Samba is now developed
 by the Samba Team as an Open Source project similar to the way the
 Linux kernel is developed\&.
 .PP 
@@ -218,7 +218,7 @@ sources were converted to YODL format (another excellent piece of Open
 Source software, available at
 \fBftp://ftp\&.icce\&.rug\&.nl/pub/unix/\fP)
 and updated for the Samba2\&.0 release by Jeremy Allison\&.
-\fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&.
+\fIsamba-bugs@samba\&.org\fP\&.
 .PP 
 See \fBsamba (7)\fP to find out how to get a full
 list of contributors and details on how to submit bug reports,
