--- a/docs/manpages/smbrun.1
+++ b/docs/manpages/smbrun.1
@@ -1,4 +1,4 @@
-.TH SMBRUN 1 "24 Nov 1998" "smbrun 2.0.0beta2"
+.TH "smbrun " "1" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 smbrun \- interface program between smbd and external programs
