--- a/docs/manpages/smbstatus.1
+++ b/docs/manpages/smbstatus.1
@@ -1,4 +1,4 @@
-.TH SMBSTATUS 1 "24 Nov 1998" "smbstatus 2.0.0beta2"
+.TH "smbstatus " "1" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 smbstatus \- report on current Samba connections
