--- a/docs/manpages/swat.8
+++ b/docs/manpages/swat.8
@@ -1,4 +1,4 @@
-.TH "swat " "8" "23 Oct 1998" "Samba" "SAMBA" 
+.TH SWAT 8 "08 Dec 1998" "swat 2.0.0beta3"
 .PP 
 .SH "NAME" 
 swat \- swat - Samba Web Administration Tool
