--- a/docs/manpages/smbstatus.1
+++ b/docs/manpages/smbstatus.1
@@ -1,4 +1,4 @@
-.TH "smbstatus " "1" "23 Oct 1998" "Samba" "SAMBA" 
+.TH SMBSTATUS 1 "15 Dec 1998" "smbstatus 2.0.0beta4"
 .PP 
 .SH "NAME" 
 smbstatus \- report on current Samba connections
