--- a/docs/manpages/lmhosts.5
+++ b/docs/manpages/lmhosts.5
@@ -1,4 +1,4 @@
-.TH LMHOSTS 5 "31 Dec 1998" "lmhosts 2.0.0beta5"
+.TH "lmhosts " "5" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 lmhosts \- The Samba NetBIOS hosts file
