--- a/docs/manpages/samba.7
+++ b/docs/manpages/samba.7
@@ -1,4 +1,4 @@
-.TH SAMBA 7 "31 Dec 1998" "samba 2.0.0beta5"
+.TH "Samba " "7" "23 Oct 1998" "Samba" "" 
 .PP 
 .SH "NAME" 
 Samba \- A Windows SMB/CIFS fileserver for UNIX
