--- a/docs/manpages/smbpasswd.8
+++ b/docs/manpages/smbpasswd.8
@@ -1,4 +1,4 @@
-.TH SMBPASSWD 8 "31 Dec 1998" "smbpasswd 2.0.0beta5"
+.TH "smbpasswd " "8" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 smbpasswd \- change a users SMB password
