preparing for release of 2.0.0

--- a/docs/manpages/smbumount.8
+++ b/docs/manpages/smbumount.8
@@ -1,4 +1,4 @@
-.TH SMBUMOUNT 8 "31 Dec 1998" "smbumount 2.0.0beta5"
+.TH SMBUMOUNT 8 "15 Jan 1999" "smbumount 2.0.0"
 .SH NAME
 smbumount \- umount for normal users
 .SH SYNOPSIS
