--- a/docs/manpages/nmblookup.1
+++ b/docs/manpages/nmblookup.1
@@ -1,4 +1,4 @@
-.TH "nmblookup " "1" "23 Oct 1998" "Samba" "SAMBA" 
+.TH NMBLOOKUP 1 "15 Jan 1999" "nmblookup 2.0.0"
 .PP 
 .SH "NAME" 
 nmblookup \- NetBIOS over TCP/IP client used to lookup NetBIOS names
