--- a/docs/manpages/smb.conf.5
+++ b/docs/manpages/smb.conf.5
@@ -1,4 +1,4 @@
-.TH "smb\&.conf " "5" "23 Oct 1998" "Samba" "SAMBA" 
+.TH SMB.CONF 5 "15 Jan 1999" "smb.conf 2.0.0"
 .PP 
 .SH "NAME" 
 smb\&.conf \- The configuration file for the Samba suite
