--- a/docs/manpages/smbd.8
+++ b/docs/manpages/smbd.8
@@ -1,4 +1,4 @@
-.TH "smbd " "8" "23 Oct 1998" "Samba" "SAMBA" 
+.TH SMBD 8 "15 Jan 1999" "smbd 2.0.0"
 .PP 
 .SH "NAME" 
 smbd \- server to provide SMB/CIFS services to clients
