--- a/docs/manpages/smbmnt.8
+++ b/docs/manpages/smbmnt.8
@@ -1,4 +1,4 @@
-.TH SMBMNT 8 "31 Dec 1998" "smbmnt 2.0.0beta5"
+.TH SMBMNT 8 "15 Jan 1999" "smbmnt 2.0.0"
 .SH NAME
 smbmnt \- mount smb file system
 .SH SYNOPSIS
