--- a/docs/manpages/smbmount.8
+++ b/docs/manpages/smbmount.8
@@ -1,4 +1,4 @@
-.TH SMBMOUNT 8 "31 Dec 1998" "smbmount 2.0.0beta5"
+.TH SMBMOUNT 8 "15 Jan 1999" "smbmount 2.0.0"
 .SH NAME
 smbmount \- mount smb file system
 .SH SYNOPSIS
