--- a/docs/manpages/smbrun.1
+++ b/docs/manpages/smbrun.1
@@ -1,4 +1,4 @@
-.TH "smbrun " "1" "23 Oct 1998" "Samba" "SAMBA" 
+.TH SMBRUN 1 "15 Jan 1999" "smbrun 2.0.0"
 .PP 
 .SH "NAME" 
 smbrun \- interface program between smbd and external programs
