"Map to guest" should be a global parameter.

--- a/docs/manpages/smb.conf.5
+++ b/docs/manpages/smb.conf.5
@@ -1,4 +1,4 @@
-.TH SMB.CONF 5 "15 Jan 1999" "smb.conf 2.0.0"
+.TH "smb\&.conf " "5" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 smb\&.conf \- The configuration file for the Samba suite
@@ -656,6 +656,9 @@ parameter for details\&.  Note that some are synonyms\&.
 \fBmangled stack\fP
 .IP 
 .IP o 
+\fBmap to guest\fP
+.IP 
+.IP o 
 \fBmax disk size\fP
 .IP 
 .IP o 
@@ -1078,9 +1081,6 @@ parameter for details\&. Note that some are synonyms\&.
 .IP 
 .IP o 
 \fBmap system\fP
-.IP 
-.IP o 
-\fBmap to guest\fP
 .IP 
 .IP o 
 \fBmax connections\fP
