--- a/kuser/klist.1
+++ b/kuser/klist.1
@@ -9,16 +9,17 @@
 list the current tickets
 .Sh SYNOPSIS
 .Nm
-.Op Fl v
-.Op Fl -verbose
+.Op Fl v | Fl -verbose
 .Sh DESCRIPTION
 .Nm
 reads and displays the current tickets in the ticket file.
 .Pp
 Options supported:
 .Bl -tag -width Ds
-.It Fl v
-.It Fl -verbose
+.It Xo
+.Fl v Ns ,
+.Fl -verbose
+.Xc
 Verbose output. Include all information from tickets.
 .El
 .Sh SEE ALSO
