--- a/TODO
+++ b/TODO
@@ -36,6 +36,8 @@ is in need of a major cleanup
 
 prepend a prefix on all generated symbols
 
+make asn1_compile use enum types where applicable
+
 ** lib/auth
 
 PAM and afskauthlib
