--- a/docs/manpages/make_smbcodepage.1
+++ b/docs/manpages/make_smbcodepage.1
@@ -1,4 +1,4 @@
-.TH MAKE_SMBCODEPAGE 1 "15 Jan 1999" "make_smbcodepage 2.0.0"
+.TH "make_smbcodepage " "1" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 make_codepage \- Construct a codepage file for Samba
