preparing for release of 2.0.1

--- a/docs/manpages/smbrun.1
+++ b/docs/manpages/smbrun.1
@@ -1,4 +1,4 @@
-.TH "smbrun " "1" "23 Oct 1998" "Samba" "SAMBA" 
+.TH SMBRUN 1 "06 Feb 1999" "smbrun 2.0.1"
 .PP 
 .SH "NAME" 
 smbrun \- interface program between smbd and external programs
