--- a/docs/manpages/lmhosts.5
+++ b/docs/manpages/lmhosts.5
@@ -1,4 +1,4 @@
-.TH "lmhosts " "5" "23 Oct 1998" "Samba" "SAMBA" 
+.TH LMHOSTS 5 "06 Feb 1999" "lmhosts 2.0.1"
 .PP 
 .SH "NAME" 
 lmhosts \- The Samba NetBIOS hosts file
